@@ -45,6 +45,7 @@ max, min, etc.) on a SelectResults that has an ORDER BY clause
 - fixes to types so that database-specific types more easily used;
 fixes to mysql text types to work with this methodology
 [ticket:269] 
+- some fixes to sqlite date type organization
 
 0.2.6
 - big overhaul to schema to allow truly composite primary and foreign
